--- a/report/01-Data.Rmd
+++ b/report/01-Data.Rmd
@@ -21,11 +21,9 @@ The data we selceted is a large dataset with 22 body/health related features, a 
 
 Whilst the overall binary classification problem on the drinking target is clear, we find it improtant to provide a real-world scenario in which we will be working our analyses towards. 
 
-We pose as analysts at a health insurance broker. The data has been collected from our policy holders (unrealistic 
+We pose as analysts at a health insurance broker. The data has been collected from our policy holders and we need to determine from this data whether they drink or not as to assign a higher premium if they do, given the far greater health risks associated with drinking.
 
-* We acknlowedge the incredibly unlikely situaton where an insurance broker would have an insured person's urine protein level but not be able to ask whether they smoke or not. However, we postulate our policy holders would be untruthful in answering this question so we shall predict the asnwer ourselves.
-
-Talk about setting up the idea of being an insurance firm and wanting to be able to predict whether 'client' are smokers or not from data we have collected to then assign a higher premium.
+* We acknlowedge the incredibly unlikely situaton where an insurance broker would have an insured person's urine protein level but not be able to ask whether they drink or not. However, we postulate our policy holders would be untruthful in answering this question so we must predict the asnwer ourselves.
 
 ## Library requirements
 
